[package]
name = "dlms-client"
version.workspace = true
edition.workspace = true
description = "DLMS/COSEM client"

[features]
default = ["std"]
std = []

[dependencies]
dlms-core = { path = "../dlms-core" }
dlms-hdlc = { path = "../dlms-hdlc" }
dlms-axdr = { path = "../dlms-axdr" }
dlms-asn1 = { path = "../dlms-asn1" }
dlms-security = { path = "../dlms-security" }
dlms-cosem = { path = "../dlms-cosem" }
dlms-transport = { path = "../dlms-transport" }
