[package]
name = "dlms-cosem"
version.workspace = true
edition.workspace = true
description = "COSEM interface classes for DLMS/COSEM"

[features]
default = ["std"]
std = []

[dependencies]
dlms-core = { path = "../dlms-core" }
dlms-axdr = { path = "../dlms-axdr" }

[dev-dependencies]
dlms-server = { path = "../dlms-server" }
